--- a/createPet.html
+++ b/createPet.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <nav class="nav-bar">
-            <a href="adoptionRequestsShelter.html">
+            <a href="adoptionRequestsListShelter.html">
                 <img src="assets/svg/clipboard.svg" class="heart" alt="">
             </a>
             <img src="assets/svg/menu.svg" class="menu" alt="">
@@ -109,23 +109,6 @@
                         class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
                 </li>
                 <br>
-                <div class="file-upload">
-                    <div class="image-upload-wrap">
-                        <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
-                        <div class="drag-text">
-                            <br>
-                            <img src="assets/svg/add.svg" alt="" style="height: 3em; width: 3em;">
-                            <h3 class="josefinsans-medium-chetwode-blue-14px">Añadir foto de la mascota</h3>
-                        </div>
-                    </div>
-                    <div class="file-upload-content">
-                        <img class="file-upload-image" src="#" alt="your image" />
-                        <div class="image-title-wrap">
-                            <button type="button" onclick="removeUpload()" class="remove-image">Borrar <span
-                                    class="image-title">Tu foto</span></button>
-                        </div>
-                    </div>
-                </div>
                 <input type="submit" value="Agregar mascota" class="button-p josefinsans-normal-white-20px ">
             </ul>
         </form>
