--- a/homeShelter.html
+++ b/homeShelter.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <nav class="nav-bar">
-            <a href="adoptionRequestsShelter.html">
+            <a href="adoptionRequestsListShelter.html">
                 <img src="assets/svg/clipboard.svg" class="heart" alt="">
             </a>
             <img src="assets/svg/menu.svg" class="menu" alt="">
