--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
         <div class="welcome">
             <h1 class="text-1 josefinsans-normal-white-30px d-flex flex-wrap">Encuentra tu compañero ideal</h1>
-            <a href="searchPet.html" class="d-flex align-items-center justify-content-center">
+            <a href="signUpUser.html" class="d-flex align-items-center justify-content-center">
                 <button class="button-primary josefinsans-semi-bold-white-25px d-flex align-items-center">Empezar
                 </button>
             </a>
@@ -48,16 +48,20 @@
         <div class="finder quicksand-medium-white-14px d-flex justify-content-around">
             <a href="">
                 <div class="text-center">
-                    <span class="find">Buscar un</span>
-                    <br>
-                    <span class="pet">perro</span>
-                </div>
+                    <a href="searchDog.html">
+                        <span class="find">Buscar un</span>
+                        <br>
+                        <span class="pet">perro</span>
+                    </div>
+                    </a>
             </a>
             <a href="">
-                <div class="text-center">
-                    <span class="find">Buscar un</span>
-                    <br>
-                    <span class="pet">gato</span>
+                <div class="text-center find-cat">
+                    <a href="searchCat.html">
+                        <span class="find">Buscar un</span>
+                        <br>
+                        <span class="pet">gato</span>
+                    </a>
                 </div>
             </a>
         </div>
@@ -203,7 +207,7 @@
         <div class="container text-center">
             <img src="assets/svg/logowhite.svg" alt="" class="logo-white">
         </div>
-        <div cclass="block-footer d-flex flex-wrap pb-4 justify-content-around">
+        <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
             <ul>
                 <li>
                     <a href="">Acerca</a>
@@ -249,7 +253,7 @@
             <p class="quicksand-normal-white-10px">© 2021 Todos los derechos reservados.</p>
         </div>
     </footer>
-
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
