--- a/profileUser.html
+++ b/profileUser.html
@@ -12,10 +12,132 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Pawchontli 🐶🐱 || Perfil</title>
+    <title>Pawchontli 🐶🐱 || Perfil usuario </title>
 </head>
 
 <body>
+
+    <header>
+        <div class="logo">
+            <a href="homeShelter.html">
+                <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
+            </a>
+        </div>
+        <nav class="nav-bar">
+            <a href="adoptionRequestsListShelter.html">
+                <img src="assets/svg/clipboard.svg" class="heart" alt="">
+            </a>
+            <img src="assets/svg/menu.svg" class="menu" alt="">
+        </nav>
+    </header>
+
+    <main>
+        <div class="detail-shelter">
+            <div class="detail-top pt-1">
+            </div>
+            <div class="shelter-text rectangle-background">
+                <div class="detail-top pt-1">
+                    <img src="assets/img/userImage.jpg" alt="" class="shelter-image" style="width: 15em;">
+                </div>
+                <div class="info-shelter d-flex flex-column">
+                    <h2 class="josefinsans-normal-black-30px d-flex justify-content-center pb-3">Victoria Robertson</h2>
+                    <div class="d-flex flex-column">
+                        <div class="main-info d-flex flex-wrap justify-content-between px-5">
+                            <div class="location">
+                                <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
+                                <p>Felipe Carrillo puerto #400, Alberto Zamora, Coyoacán, 04000, CDMX.</p>
+                            </div>
+                            <div class="phone">
+                                <p class="josefinsans-chetwode-blue-18px">TELÉFONO</p>
+                                <p>5523423453</p>
+                            </div>
+                            <div class="web">
+                                <p class="josefinsans-chetwode-blue-18px">WEB</p>
+                                <a href="https://refugiosangregorio.com">
+                                    <p>www.refugiosangregorio.com</p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="secondary-info d-flex flex-wrap justify-content-center px-5">
+                            <div>
+                                <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
+                                <p>Somos un refugio que sobrevive de donativos y ayuda de almas caritativas.
+                                    Amplios jardines, paseos, atención individualizada, cariño y supervisión continua para tu todos ellos.
+                                    Cuidamos a más de 200 perros y constantemente rescatamos a más.</p>
+                            </div>
+                        </div>
+                        <div class="user-actions d-flex justify-content-center pt-5">
+                            <form action="https://www.paypal.com/donate" method="post" target="_top"
+                                class="button-donation">
+                                <input type="hidden" name="business" value="princessna11@hotmail.com" />
+                                <input type="hidden" name="item_name" value="Pawchontli" />
+                                <input type="hidden" name="currency_code" value="MXN" />
+                                <input type="image" src="assets/svg/button-donation-shelter.svg" border="0" name="submit style"
+                                    title="PayPal - The safer, easier way to pay online!"
+                                    alt="Donate with PayPal button" style="width: 10em;" />
+                                <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
+                                    height="1" />
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer text-center>
+        <div class="top-footer">
+            <img onclick="topFunction()" id="myBtn" title="Go to top" src="assets/svg/arrow.svg" alt="" class="arrow">
+        </div>
+        <div class="container text-center">
+            <img src="assets/svg/logowhite.svg" alt="" class="logo-white">
+        </div>
+        <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
+            <ul>
+                <li>
+                    <a href="">Acerca</a>
+                </li>
+                <li>
+                    <a href="">Refugios</a>
+                </li>
+                <li>
+                    <a href="">Condiciones de uso</a>
+                </li>
+                <li>
+                    <a href="">Política de privacidad</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">Partners</a>
+                </li>
+                <li>
+                    <a href="">Soporte</a>
+                </li>
+                <li>
+                    <a href="">Mapa del sitio</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="icons-footer d-flex justify-content-evenly">
+            <a href="" role="button">
+                <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="">
+                <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
+            </a>
+        </div>
+        <div class="text-center pb-4">
+            <p class="quicksand-normal-white-10px">© 2021 Todos los derechos reservados.</p>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -23,6 +145,7 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
