--- a/signUpUser.html
+++ b/signUpUser.html
@@ -19,7 +19,7 @@
 
     <header class="log-in d-flex align-items-center justify-content-center">
         <h1 class="josefinsans-normal-black-30px">Registrarme</h1>
-        <a href="signUpUser.html" class="registrarme josefinsans-normal-chetwode-blue-16px">Ingresar</a>
+        <a href="logInUser.html" class="registrarme josefinsans-normal-chetwode-blue-16px">Ingresar</a>
     </header>
 
     <main>
