--- a/updateShelter.html
+++ b/updateShelter.html
@@ -19,13 +19,13 @@
 
     <header>
         <div class="logo">
-            <a href="index.html">
+            <a href="homeShelter.html">
                 <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
             </a>
         </div>
         <div class="nav-bar">
-            <a href="favouritePet.html">
-                <img src="assets/svg/heart.svg" class="heart" alt="">
+            <a href="adoptionRequestsListShelter.html">
+                <img src="assets/svg/clipboard.svg" class="heart" alt="">
             </a>
             <img src="assets/svg/menu.svg" class="menu" alt="">
         </div>
