--- a/adoptionRequestsListShelter.html
+++ b/adoptionRequestsListShelter.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Pawchontli 🐶🐱 || Perfil refugio </title>
+    <title>Pawchontli 🐶🐱 || Solicitudes de adopción </title>
 </head>
 
 <body>
@@ -24,63 +24,38 @@
             </a>
         </div>
         <nav class="nav-bar">
-            <a href="favouritePet.html">
-                <img src="assets/svg/heart.svg" class="heart" alt="">
+            <a href="adoptionRequestsListShelter.html">
+                <img src="assets/svg/clipboard.svg" class="heart" alt="">
             </a>
             <img src="assets/svg/menu.svg" class="menu" alt="">
         </nav>
     </header>
 
     <main>
-        <div class="detail-shelter">
-            <div class="detail-top pt-1">
+        <div class="d-flex justify-content-center flex-column">
+            <button type="button" class="collapsible container-fluid">Gnocchi</button>
+            <div class="content container-fluid">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat.</p>
             </div>
-            <div class="shelter-text rectangle-background">
-                <div class="detail-top pt-1">
-                    <img src="assets/img/shelterImage.jpg" alt="" class="shelter-image" style="width: 15em;">
-                </div>
-                <div class="info-shelter d-flex flex-column">
-                    <h2 class="josefinsans-normal-black-30px d-flex justify-content-center pb-3">Refugio San Gregorio</h2>
-                    <div class="d-flex flex-column">
-                        <div class="main-info d-flex flex-wrap justify-content-between px-5">
-                            <div class="location">
-                                <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
-                                <p>Felipe Carrillo puerto #400, Alberto Zamora, Coyoacán, 04000, CDMX.</p>
-                            </div>
-                            <div class="phone">
-                                <p class="josefinsans-chetwode-blue-18px">TELÉFONO</p>
-                                <p>5523423453</p>
-                            </div>
-                            <div class="web">
-                                <p class="josefinsans-chetwode-blue-18px">WEB</p>
-                                <a href="https://refugiosangregorio.com">
-                                    <p>www.refugiosangregorio.com</p>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="secondary-info d-flex flex-wrap justify-content-center px-5">
-                            <div>
-                                <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
-                                <p>Somos un refugio que sobrevive de donativos y ayuda de almas caritativas.
-                                    Amplios jardines, paseos, atención individualizada, cariño y supervisión continua para tu todos ellos.
-                                    Cuidamos a más de 200 perros y constantemente rescatamos a más.</p>
-                            </div>
-                        </div>
-                        <div class="user-actions d-flex justify-content-center pt-5">
-                            <form action="https://www.paypal.com/donate" method="post" target="_top"
-                                class="button-donation">
-                                <input type="hidden" name="business" value="princessna11@hotmail.com" />
-                                <input type="hidden" name="item_name" value="Pawchontli" />
-                                <input type="hidden" name="currency_code" value="MXN" />
-                                <input type="image" src="assets/svg/button-donation-shelter.svg" border="0" name="submit style"
-                                    title="PayPal - The safer, easier way to pay online!"
-                                    alt="Donate with PayPal button" style="width: 10em;" />
-                                <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
-                                    height="1" />
-                            </form>
-                        </div>
-                    </div>
-                </div>
+            <button type="button" class="collapsible container-fluid">Apolo</button>
+            <div class="content container-fluid">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat.</p>
+            </div>
+            <button type="button" class="collapsible container-fluid">Lucy</button>
+            <div class="content container-fluid">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat.</p>
+            </div>
+            <button type="button" class="collapsible container-fluid">Jacinta</button>
+            <div class="content container-fluid">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat.</p>
             </div>
         </div>
     </main>
@@ -145,6 +120,23 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
+
+    <script>
+        var coll = document.getElementsByClassName("collapsible");
+        var i;
+
+        for (i = 0; i < coll.length; i++) {
+            coll[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var content = this.nextElementSibling;
+                if (content.style.display === "block") {
+                    content.style.display = "none";
+                } else {
+                    content.style.display = "block";
+                }
+            });
+        }
+    </script>
 
 </body>
 
