--- a/detailPet.html
+++ b/detailPet.html
@@ -12,12 +12,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
-        integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA=="
-        crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-        crossorigin="anonymous" />
     <title>Pawchontli 🐶🐱 || Detalle mascota </title>
 </head>
 
@@ -40,28 +34,28 @@
     <main>
         <div class="detail-pet">
             <div class="image-pet d-flex justify-content-center align-items-center flex-column pt-1">
+                <img onclick="goBack()" src="assets/svg/arrowleft.svg" alt="" class="arrow-left" style="width: 2.5em;">
                 <img src="assets/img/pexels-rk-jajoria-1189673.jpg" alt="" class="container-fluid">
-                <div class=""></div>
             </div>
             <div class="pet-text rectangle-background">
                 <div class="info-pet">
-                    <h2 class="px-5 josefinsans-normal-black-30px">Gnocchi</h2>
+                    <h2 class="josefinsans-normal-black-30px d-flex justify-content-between">Gnocchi</h2>
                     <div class="d-flex flex-column">
-                        <div class="main-info d-flex flex-wrap justify-content-around">
-                            <div>
+                        <div class="main-info d-flex flex-wrap justify-content-between px-5 mx-5">
+                            <div class="age">
                                 <p class="josefinsans-chetwode-blue-18px">EDAD</p>
                                 <p>8 meses</p>
                             </div>
-                            <div>
+                            <div class="size">
                                 <p class="josefinsans-chetwode-blue-18px">TALLA</p>
                                 <p>Mediana</p>
                             </div>
-                            <div>
+                            <div class="sex">
                                 <p class="josefinsans-chetwode-blue-18px">SEXO</p>
                                 <p>Macho</p>
                             </div>
                         </div>
-                        <div class="secondary-info d-flex flex-column justify-content-around">
+                        <div class="secondary-info d-flex flex-column justify-content-between px-5 mx-5">
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
                                 <p>Coyoacán</p>
@@ -102,10 +96,11 @@
                                 REFUGIO
                             </p>
                             <a href="profileShelter.html" class="d-inline-flex container flex-row">
-                                <img src="assets/img/scsh 2021-04-19 a la(s) 14.00.37.jpg" alt="" style="width: 6em; height: 6em;">
-                                <div class="col-10 px-4">
+                                <img src="assets/img/shelterImage.jpg" alt=""
+                                    style="width: 6em; height: 6em;">
+                                <div class="col-12 text-shelter">
                                     <p>Refugio San Gregorio</p>
-                                    <p>Felipe Carrillo puerto #400, Alberto Zamora, Coyoacán, 04000, CDMX.</p>
+                                    <p class="d-flex flex-wrap">Felipe Carrillo puerto #400, Alberto Zamora, <br> Coyoacán, 04000, CDMX.</p>
                                 </div>
                             </a>
                         </div>
@@ -171,15 +166,10 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
-
-
 
 </body>
 
