--- a/profileShelterEdit.html
+++ b/profileShelterEdit.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Pawchontli 🐶🐱 || Detalle mascota </title>
+    <title>Pawchontli 🐶🐱 || Ver el perfil  de mi refugio </title>
 </head>
 
 <body>
@@ -32,80 +32,58 @@
     </header>
 
     <main>
-        <div class="detail-pet">
-            <div class="image-pet d-flex justify-content-center align-items-center flex-column pt-1">
-                <img onclick="goBack()" src="assets/svg/arrowleft.svg" alt="" class="arrow-left" style="width: 2.5em;">
-                <img src="assets/img/pexels-rk-jajoria-1189673.jpg" alt="" class="container-fluid">
-                <a href="updatePet.html">
-                    <img src="assets/svg/editwhite.svg" alt="" class="edit" style="width: 3em;">
-                </a>
+        <div class="detail-shelter">
+            <div class="detail-top pt-1">
             </div>
-            <div class="pet-text rectangle-background">
-                <div class="info-pet">
-                    <h2 class="josefinsans-normal-black-30px d-flex justify-content-between">Gnocchi</h2>
+            <div class="shelter-text rectangle-background">
+                <div class="detail-top pt-1">
+                    <img src="assets/img/shelterImage.jpg" alt="" class="shelter-image" style="width: 15em;">
+                    <a href="updateShelter.html">
+                        <img src="assets/svg/editwhite.svg" alt="" class="edit" style="width: 3em;">
+                    </a>
+                </div>
+                <div class="info-shelter d-flex flex-column">
+                    <h2 class="josefinsans-normal-black-30px d-flex justify-content-center">Refugio San Gregorio</h2>
+                    <a href="updateShelter.html">                    
+                        <img src="assets/svg/edit.svg" alt="" class="edit pb-4"  style="width: 3em;">
+                    </a>
                     <div class="d-flex flex-column">
-                        <div class="main-info d-flex flex-wrap justify-content-between px-5 mx-5">
-                            <div class="age">
-                                <p class="josefinsans-chetwode-blue-18px">EDAD</p>
-                                <p>8 meses</p>
+                        <div class="main-info d-flex flex-wrap justify-content-between px-5">
+                            <div class="location">
+                                <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
+                                <p>Felipe Carrillo puerto #400, Alberto Zamora, Coyoacán, 04000, CDMX.</p>
                             </div>
-                            <div class="size">
-                                <p class="josefinsans-chetwode-blue-18px">TALLA</p>
-                                <p>Mediana</p>
+                            <div class="phone">
+                                <p class="josefinsans-chetwode-blue-18px">TELÉFONO</p>
+                                <p>5523423453</p>
                             </div>
-                            <div class="sex">
-                                <p class="josefinsans-chetwode-blue-18px">SEXO</p>
-                                <p>Macho</p>
+                            <div class="web">
+                                <p class="josefinsans-chetwode-blue-18px">WEB</p>
+                                <a href="https://refugiosangregorio.com">
+                                    <p>www.refugiosangregorio.com</p>
+                                </a>
                             </div>
                         </div>
-                        <div class="secondary-info d-flex flex-column justify-content-between px-5 mx-5">
-                            <div>
-                                <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
-                                <p>Coyoacán</p>
-                            </div>
+                        <div class="secondary-info d-flex flex-wrap justify-content-center px-5">
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
-                                <p>Gnocchi es muy juguetón, convive con otros perros. Está ciego de un ojo. Esterilizado
-                                    y con
-                                    vacunas al día.</p>
-                            </div>
-                            <div>
-                                <p class="josefinsans-chetwode-blue-18px">HISTORIA</p>
-                                <p>Gnocchi fue rescatado de la calle.</p>
-                            </div>
-                            <div>
-                                <p class="josefinsans-chetwode-blue-18px">NECESIDADES ESPECIALES</p>
-                                <p>Espacios amplios.</p>
+                                <p>Somos un refugio que sobrevive de donativos y ayuda de almas caritativas.
+                                    Amplios jardines, paseos, atención individualizada, cariño y supervisión continua para tu todos ellos.
+                                    Cuidamos a más de 200 perros y constantemente rescatamos a más.</p>
                             </div>
                         </div>
-                        <div class="user-actions d-inline-flex flex-row justify-content-evenly">
+                        <div class="user-actions d-flex justify-content-center pt-5">
                             <form action="https://www.paypal.com/donate" method="post" target="_top"
                                 class="button-donation">
                                 <input type="hidden" name="business" value="princessna11@hotmail.com" />
                                 <input type="hidden" name="item_name" value="Pawchontli" />
                                 <input type="hidden" name="currency_code" value="MXN" />
-                                <input type="image" src="assets/svg/button-sponsor.svg" border="0" name="submit style"
+                                <input type="image" src="assets/svg/button-donation-shelter.svg" border="0" name="submit style"
                                     title="PayPal - The safer, easier way to pay online!"
                                     alt="Donate with PayPal button" style="width: 10em;" />
                                 <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
                                     height="1" />
                             </form>
-                            <a href="adoptionRequest.html">
-                                <button class="button-main">Ver solicitudes</button>
-                            </a>
-                        </div>
-                        <div class="info-shelter py-5 d-flex flex-column">
-                            <p class="px-4 josefinsans-chetwode-blue-18px">
-                                REFUGIO
-                            </p>
-                            <a href="profileShelter.html" class="d-inline-flex container flex-row">
-                                <img src="assets/img/shelterImage.jpg" alt=""
-                                    style="width: 6em; height: 6em;">
-                                <div class="col-12 text-shelter">
-                                    <p>Refugio San Gregorio</p>
-                                    <p class="d-flex flex-wrap">Felipe Carrillo puerto #400, Alberto Zamora, <br> Coyoacán, 04000, CDMX.</p>
-                                </div>
-                            </a>
                         </div>
                     </div>
                 </div>
