--- a/searchDog.html
+++ b/searchDog.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Pawchontli 🐶🐱 || Buscar mascota</title>
+    <title>Pawchontli 🐶🐱 || Buscar un perro</title>
 </head>
 
 <body>
@@ -101,7 +101,7 @@
                     </path>
                 </svg>
                 <a href="">
-                    <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                    <img class="card-img-top" src="assets/img/perro_4.jpg" alt="Pet">
                 </a>
                 <div class="card-body">
                     <a href="">
@@ -117,7 +117,7 @@
                     </path>
                 </svg>
                 <a href="">
-                    <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                    <img class="card-img-top" src="assets/img/perro_9.jpg" alt="Pet">
                 </a>
                 <div class="card-body">
                     <a href="">
@@ -168,7 +168,7 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                <img class="card-img-top" src="assets/img/perro_9.jpg" alt="Pet">
                 <div class="card-body">
                     <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
                 </div>
@@ -181,7 +181,7 @@
                     </path>
                 </svg>
                 <a href="">
-                    <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                    <img class="card-img-top" src="assets/img/perro_11.jpg" alt="Pet">
                 </a>
                 <div class="card-body">
                     <a href="">
@@ -236,7 +236,7 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                <img class="card-img-top" src="assets/img/perro_16.jpg" alt="Pet">
                 <div class="card-body">
                     <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
                 </div>
@@ -248,7 +248,7 @@
                         d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
                     </path>
                 </svg>
-                <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                <img class="card-img-top" src="assets/img/perro_19.jpg" alt="Pet">
                 <div class="card-body">
                     <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
                 </div>
